--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -60,7 +60,7 @@
 
 #page-give-classes .input-block+.input-block,
 #page-give-classes .input-block+.textarea-block,
-#page-give-classes .select-block+.input-block{
+#page-give-classes .select-block+.input-block {
   margin-top: 2.4rem;
 }
 
@@ -104,7 +104,7 @@
   text-decoration: none;
 
   transition: 0.3s;
-  margin-top:3.2rem;
+  margin-top: 3.2rem;
 }
 
 #page-give-classes main footer button:hover {
@@ -121,5 +121,37 @@
 @media (min-width: 700px) {
   #page-give-classes #container {
     max-width: 100vw;
+  }
+
+  #page-give-classes .page-header .header-content {
+    margin-bottom: 0;
+  }
+
+  #page-give-classes main fieldset {
+    padding: 0 64px;
+  }
+
+  .schedule-item {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    column-gap: 1.6rem;
+  }
+
+  #page-give-classes #schedule-item .select-block+.input-block,
+  #page-give-classes #schedule-item .input-block+.input-block{
+    margin-top: 0;
+  }
+  
+  #page-give-classes main footer {
+    padding: 40px 64px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  #page-give-classes main footer button {
+    margin-top: 0;
+    width: 200px;
   }
 }
