Adicionando fução com JS
Foi adcionado a função de adicionar um novo horário

--- a/styles/partials/page-give-classes.css
+++ b/styles/partials/page-give-classes.css
@@ -137,8 +137,8 @@
     column-gap: 1.6rem;
   }
 
-  #page-give-classes #schedule-item .select-block+.input-block,
-  #page-give-classes #schedule-item .input-block+.input-block{
+  #page-give-classes #schedule-items .select-block+.input-block,
+  #page-give-classes #schedule-items .input-block+.input-block{
     margin-top: 0;
   }
   
