--- a/src/views/study.html
+++ b/src/views/study.html
@@ -72,70 +72,32 @@
     </header>
 
     <main>
-      <article class="teacher-item">
-        <header>
-            <img 
-                src="https://avatars2.githubusercontent.com/u/6643122?s=460&u=1e9e1f04b76fb5374e6a041f5e41dce83f3b5d92&v=4" 
-                alt="Maik Brito">
-            <div>
-                <strong>Maik Brito</strong>
-                <span>Educação Física</span>
-            </div>
-        </header>
-    
-        <p>Instrutor de Educação Física para iniciantes, minha missão de vida é levar saúde e contribuir para o crescimento de quem se interessar.<br><br>          Comecei a minha jornada profissional em 2001, quando meu pai me deu dois alteres de 32kg com a seguinte condição: "Aprenda a fazer dinheiro com isso!"</p>
-    
-        <footer>
-            <p>Preço/hora<strong>R$ 40,00</strong>
-            </p>
-            <button type="button">
-                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-            </button>
-        </footer>
-      </article>
 
-      <article class="teacher-item">
+     {%for proffy in proffys %}
+        <article class="teacher-item">
         <header>
             <img 
-                src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" 
-                alt="Diego Fernandes">
+                src="{{proffy.avatar}}" 
+                alt="{{proffy.name}}">
             <div>
-                <strong>Diego Fernandes</strong>
-                <span>Química</span>
+                <strong>{{proffy.name}}</strong>
+                <span>{{proffy.subject}}</span>
             </div>
         </header>
     
-        <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em laboratório e por mudar a vida das pessoas através de experiências. Mais de 200.000 pessoas já passaram por uma das minhas explosões.</p>
+        <p>{{proffy.bio}}</p>
     
         <footer>
-            <p>Preço/hora<strong>R$ 20,00</strong>
+            <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
             </p>
-            <button type="button">
-                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-            </button>
+            <a href="https://api.whatsapp.com/send?phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subjetc}} {{proffy.name}}" class="button" target="_blank">
+                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entre em contato
+            </a>
         </footer>
-      </article>
-      <article class="teacher-item">
-        <header>
-            <img 
-                src="https://media-exp1.licdn.com/dms/image/C4E03AQHfarmcSLlWtA/profile-displayphoto-shrink_800_800/0?e=1602115200&v=beta&t=_RGFnnHoRLLHSxHA_snukouP2InVTmhjY4H0C2Gf-7Q" 
-                alt="Tiago Luchtenberg">
-            <div>
-                <strong>Tiago Luchtenberg</strong>
-                <span>Geografia</span>
-            </div>
-        </header>
-    
-        <p>As vezes não sei nem onde eu tô, mas consigo me localizar facilmente em qualquer lugar. Tenho memória fotográfica e nunca fico perdido.<br><br> Eu ensino a galera como não se perder na vida, com lições geográficas simples pra você nunca mais precisar de mapa na sua bela vida.</p>
-    
-        <footer>
-            <p>Preço/hora<strong>R$ 360,00</strong>
-            </p>
-            <button type="button">
-                <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
-            </button>
-        </footer>
-      </article>
+        </article>
+     {%endfor%}
+      
+
     </main>
   </div>
 
