--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -73,16 +73,13 @@
             <label for="subject"> Máteria</label>
             <select name="subject" id="subject"required>
               <option value="">Selecione uma opção</option>
-              <option value="0">Artes</option>
-              <option value="1">Biologia</option>
-              <option value="2">Ciência</option>
-              <option value="3">Educação Física</option>
-              <option value="4">Física</option>
-              <option value="5">Geografia</option>
-              <option value="6">História</option>
-              <option value="7">Matemática</option>
-              <option value="8">Português</option>
-              <option value="9">Quimica</option>
+                
+                {%for subject in subjects%}
+                  <option value="{{loop.index}}">
+                    {{subject}}
+                  </option>
+                {%endfor%}
+
             </select>
           </div>
 
@@ -90,7 +87,7 @@
             <label for="cost">Custoda da sua hora/aula
               <small>(R$)</small>
             </label>
-            <input type="cost" id="cost" type="number" required>
+            <input name="cost" type="cost" id="cost" type="number" required>
           </div>
         </fieldset>
 
@@ -104,13 +101,13 @@
               <label for="weekday">Dia da semana</label>
               <select name="weekday[]" required>
                 <option value="">Selecione uma opção</option>
-                <option value="0">Domingo</option>
-                <option value="1">Segunda-feira</option>
-                <option value="2">Terça-feira</option>
-                <option value="3">Quarta-feira</option>
-                <option value="4">Quinta-feira</option>
-                <option value="5">Sexta-feira</option>
-                <option value="6">Sábado</option>
+                 
+                  {%for weekday in weekdays%}
+                    <option value="{{loop.index0}}">
+                      {{weekday}}
+                    </option>
+                  {%endfor%}
+
               </select>
             </div>
 
